--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "axios": "^1.6.7",
+    "heroicons": "^2.1.3",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
     "vue-router": "^4.3.0"
